# adventofcode

2025/Rust/day01/: justfile
2025/Rust/day01/benches/: part1.rs  part2.rs
2025/Rust/day01/src/: lib.rs  part1.rs  part2.rs
2025/Rust/day02/: Cargo.toml
2025/Rust/day02/benches/: part1.rs  part2.rs
2025/Rust/day02/src/: lib.rs  part1.rs  part2.rs
