[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "7"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "part1"
harness = false

[[bench]]
name = "part2"
harness = false
